--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ gunicorn==23.0.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
 idna==3.10
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
+networkx==3.2.1
 numpy==2.0.2
 packaging==25.0
 PyYAML==6.0.2
@@ -27,4 +29,6 @@ tqdm==4.67.1
 transformers==4.40.0
 typing_extensions==4.14.1
 urllib3==2.5.0
+uv==0.8.0
 Werkzeug==3.1.3
+zipp==3.23.0
