--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.9.0
 blinker==1.9.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
@@ -9,7 +10,6 @@ gunicorn==23.0.0
 hf-xet==1.1.5
 huggingface-hub==0.33.4
 idna==3.10
-importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -17,18 +17,17 @@ mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.2
 packaging==25.0
+psutil==7.0.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
 safetensors==0.5.3
 sentencepiece==0.2.0
-sympy==1.13.1
-tokenizers==0.19.1
-torch==2.5.0
+sympy==1.14.0
+tokenizers==0.21.2
+torch==2.7.1
 tqdm==4.67.1
-transformers==4.40.0
+transformers==4.53.3
 typing_extensions==4.14.1
 urllib3==2.5.0
-uv==0.8.0
 Werkzeug==3.1.3
-zipp==3.23.0
