--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Flask==3.1.1
 fsspec==2025.7.0
 gunicorn==23.0.0
 hf-xet==1.1.5
-huggingface-hub==0.33.4
+# huggingface-hub==0.33.4
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -25,8 +25,8 @@ requests==2.32.4
 safetensors==0.5.3
 sentencepiece==0.2.0
 sympy==1.14.0
-tokenizers==0.21.2
-torch==2.7.1
+# tokenizers==0.21.2
+# torch==2.7.1
 tqdm==4.67.1
 transformers==4.53.3
 typing_extensions==4.14.1
