--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,58 @@
 accelerate==1.9.0
+annotated-types==0.7.0
+anyio==4.9.0
 blinker==1.9.0
+breadability==0.1.20
 certifi==2025.7.14
+chardet==5.2.0
 charset-normalizer==3.4.2
 click==8.1.8
+distro==1.9.0
+docopt==0.6.2
+exceptiongroup==1.3.0
 filelock==3.18.0
 Flask==3.1.1
 fsspec==2025.7.0
 gunicorn==23.0.0
+h11==0.16.0
 hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
 # huggingface-hub==0.33.4
 idna==3.10
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+lxml==6.0.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.2.1
+# nltk==3.9.1
 numpy==2.0.2
+openai==1.97.1
 packaging==25.0
 protobuf==3.20.3
 psutil==7.0.0
+pycountry==24.6.1
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
-safetensors==0.5.3
+# safetensors==0.5.3
 sentencepiece==0.2.0
+sniffio==1.3.1
+# sumy==0.11.0
 sympy==1.14.0
 # tokenizers==0.21.2
-# torch==2.7.1
+torch==2.7.1
 tqdm==4.67.1
-transformers==4.53.3
+# transformers==4.53.3
+typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 Werkzeug==3.1.3
-nltk==3.9.1
-sumy==0.11.0
+zipp==3.23.0
